<resources>
    <string name="app_name">StoryApp</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="message_welcome_page">A place to connect Bangkit 2023 cohorts</string>
    <string name="title_welcome_page">Welcome to StoryApp!</string>
    <string name="title_signup_page">Make an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login to explore!</string>
    <string name="title_login_page">Are you ready?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Welcome to StoryApp</string>
    <string name="empty_image_warning">Empty Image Warning</string>
    <string name="appwidget_text">STORY APP BANNER</string>
    <string name="empty_text">Empty Text</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_fill_first">FILL IT IN FIRST</string>
    <string name="add_description">Add description…</string>
    <string name="upload">UPLOAD</string>
    <string name="description">Description</string>
    <string name="toast_upload_failed">Failed to upload your story</string>
    <string name="userWelcome">"Hello, "</string>
    <string name="toastNavigateError">There\'s something wrong with navigating</string>
    <string name="permissionGranted">Permission request granted</string>
    <string name="permissionDenied">Permission request denied</string>
    <string name="dialogRegisterSuccess">Registration Success</string>
    <string name="oke">OKE</string>
    <string name="dialogRegisterFailed">Registration Failed</string>
    <string name="dialogLoginFailed">Login Failed</string>
    <string name="takePictureFailed">Take Picture Failed</string>
    <string name="showCameraFailed">Show Camera Failed</string>
    <string name="weakPassword">Your password is too weak</string>
    <string name="unValidEmail">Input valid email</string>
    <string name="nameTooLong">Your name is too long</string>
    <string name="mainFabLogout">Button for logout</string>
    <string name="mainFabAdd">Button for add story</string>
    <string name="storyPictureDisplay">Story image display</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satelite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="addLocation">Add my location</string>
    <string name="noImageSelected">No image selected</string>
    <string name="autoFillHints">This is my story description</string>
    <string name="conDesStoryCameraButton">Button for taking picture from camera</string>
    <string name="conDesStoryGalleryButton">Button for</string>
    <string name="conDesStoryPictureDisplay">Picked Picture Display</string>
    <string name="conDesSwitchCameraButton">Button for switching the camera</string>
</resources>